面试记录更新

--- a/面试记录.md
+++ b/面试记录.md
@@ -58,3 +58,41 @@ Spring装配机制？要多讲讲，主动去讲Autowired根据啥装配的，Re
 5. 你在项目中的价值？。。。这个还真的要认真去编一两个。。。。。一定要牵扯到技术！
 6. 项目中遇到的比较复杂的东西？
 
+
+
+#### 8/17 图灵机器人
+
+Nginx
+
+Redis 淘汰策略
+
+Es倒排索引
+
+
+
+
+
+#### 8/24 金斧子
+
+导入大文件，在内存中的生命周期？
+
+java8 reduce操作具体做了些什么？同时要考虑还可能问什么。。。
+
+RPC都有什么协议？加入http承载不了并发了，要转mq需要注意什么？
+
+对于几百万的表，你们是怎么优化，怎么拆分的？
+
+新增加索引，对于新插入的数据有什么影响？
+
+Trace异常链路原理？微服务场景下怎么精确定位异常发生的位置的？
+
+ngnix和网关的区别？nginx不需要经过三次握手四次挥手
+
+跟第三方对接，怎么保证幂等性的？怎么防注入？
+
+es索引原理？不就是倒排索引吗。。还要再去总结新的关于es的。。。
+
+多个不同业务的定时任务同时运行会有哪些问题？（可能是想引到多线程问题上去）
+
+聚合函数索引生效吗？需要用到但又会让索引失效，怎么避免豁解决这个问题？
+
