近期内容记录

--- a/面试记录.md
+++ b/面试记录.md
@@ -74,25 +74,54 @@ Es倒排索引
 
 #### 8/24 金斧子
 
-导入大文件，在内存中的生命周期？
+- [ ] 导入大文件，在内存中的生命周期？
 
-java8 reduce操作具体做了些什么？同时要考虑还可能问什么。。。
+  超大文件上传方案？
 
-RPC都有什么协议？加入http承载不了并发了，要转mq需要注意什么？
+  超大excel上传导入？
 
-对于几百万的表，你们是怎么优化，怎么拆分的？
+- [ ] java8 reduce操作具体做了些什么？同时要考虑还可能问什么。。。
 
-新增加索引，对于新插入的数据有什么影响？
+- [ ] RPC都有什么协议？假如http承载不了并发了，要转mq需要注意什么？
 
-Trace异常链路原理？微服务场景下怎么精确定位异常发生的位置的？
+  RPC，远程过程调用。这问题有问题。。。。
 
-ngnix和网关的区别？nginx不需要经过三次握手四次挥手
+- [ ] 对于几百万的表，你们是怎么优化，怎么拆分的？
 
-跟第三方对接，怎么保证幂等性的？怎么防注入？
+  将uuid进行hash计算，获取到整数值，再进行取模操作
 
-es索引原理？不就是倒排索引吗。。还要再去总结新的关于es的。。。
+- [ ] 新增加索引，对于新插入的数据有什么影响？
 
-多个不同业务的定时任务同时运行会有哪些问题？（可能是想引到多线程问题上去）
+- [ ] Trace异常链路原理？微服务场景下怎么精确定位异常发生的位置的？
 
-聚合函数索引生效吗？需要用到但又会让索引失效，怎么避免豁解决这个问题？
+  https://blog.csdn.net/yangcheng33/article/details/80796129
+
+  https://zhuanlan.zhihu.com/p/84795578
+
+  https://www.cnblogs.com/wudimanong/p/10710923.html
+
+  一个思路：服务间通信时，把最外层的traceid带上，因为调用下游服务时会产生新的traceid，通过转发的traceid保证整条链路等能够有唯一的traceID标识。
+
+- [ ] ngnix和网关的区别？
+
+  - nginx不需要经过三次握手四次挥手
+  - nginx对外而言，网关对内而言
+  - 
+
+- [ ] 跟第三方对接，怎么保证幂等性的？怎么防注入？
+
+  https://blog.csdn.net/u011635492/article/details/81058153?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522163101862516780366542456%2522%252C%2522scm%2522%253A%252220140713.130102334.pc%255Fblog.%2522%257D&request_id=163101862516780366542456&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~blog~first_rank_v2~rank_v29-1-81058153.pc_v2_rank_blog_default&utm_term=%E9%AB%98%E5%B9%B6%E5%8F%91%E4%B8%8B%E6%8E%A5%E5%8F%A3%E5%B9%82%E7%AD%89%E6%80%A7%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88&spm=1018.2226.3001.4450
+
+  - 幂等性：
+    - 数据库乐观锁（版本号机制）
+    - 数据库业务标识，根据业务标识去判断是否已有相同请求执行过了
+    - 对于数据库新增，设置唯一索引，防止新增脏数据
+    - 分布式锁
+  - 防注入：参数值过滤
+
+- [ ] es索引原理？不就是倒排索引吗。。还要再去总结新的关于es的。。。
+
+- [x] 多个不同业务的定时任务同时运行会有哪些问题？（可能是想引到多线程问题上去）
+
+- [ ] 聚合函数索引生效吗？需要用到但又会让索引失效，怎么避免豁解决这个问题？
 
